// Copyright 2023 StreamNative, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package proto;

option go_package = "github.com/streamnative/oxia/proto";

import "client.proto";

message StorageEntry {
  bytes value = 1;
  int64 version_id = 2;
  int64 modifications_count = 3;
  fixed64 creation_timestamp = 4;
  fixed64 modification_timestamp = 5;

  optional int64 session_id = 6;
  optional string client_identity = 7;
}

message SessionMetadata {
  uint32 timeout_ms = 1;
  string identity = 2;
}

message LogEntryValue {
  oneof value {
    WriteRequests requests = 1;
  }
}

message WriteRequests {
    repeated io.streamnative.oxia.proto.WriteRequest writes = 1;
}
